.antlr/MyGrammerParser.java
// Generated from c:\Users\Gerardo\Documents\github\lab-0-compiladores\MyGrammer.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyGrammerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, COMMENTS=14, PLUS=15, MINUS=16, 
		STAR=17, SLASH=18, LOWERTHAN=19, EQUALS=20, LOWEREQUAL=21, IFKEY=22, LOOPKEY=23, 
		ELSEKEY=24, THENKEY=25, WHILEKEY=26, CLASSKEY=27, INHERITSKEY=28, FIKEY=29, 
		INKEY=30, LETKEY=31, NEWKEY=32, POOLKEY=33, ISVOIDKEY=34, NOTKEY=35, TYPE=36, 
		ID=37, OBJECT=38, ALPHANUMERIC=39, DIGIT=40, LOWER=41, UPPER=42, INTEGERS=43, 
		LETTERS=44, STRING=45, WHITESPACE=46;
	public static final int
		RULE_program = 0, RULE_classP = 1, RULE_feature = 2, RULE_method = 3, 
		RULE_arguments = 4, RULE_attribute = 5, RULE_formal = 6, RULE_expr = 7, 
		RULE_declaration = 8, RULE_multipleExpr = 9, RULE_expr2 = 10, RULE_methodCall = 11, 
		RULE_overwrite = 12, RULE_attrWrite = 13, RULE_funCall = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classP", "feature", "method", "arguments", "attribute", "formal", 
			"expr", "declaration", "multipleExpr", "expr2", "methodCall", "overwrite", 
			"attrWrite", "funCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'{'", "'}'", "'('", "')'", "':'", "','", "'<-'", "'true'", 
			"'false'", "'~'", "'@'", "'.'", null, "'+'", "'-'", "'*'", "'/'", "'<'", 
			"'='", "'<='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "COMMENTS", "PLUS", "MINUS", "STAR", "SLASH", "LOWERTHAN", 
			"EQUALS", "LOWEREQUAL", "IFKEY", "LOOPKEY", "ELSEKEY", "THENKEY", "WHILEKEY", 
			"CLASSKEY", "INHERITSKEY", "FIKEY", "INKEY", "LETKEY", "NEWKEY", "POOLKEY", 
			"ISVOIDKEY", "NOTKEY", "TYPE", "ID", "OBJECT", "ALPHANUMERIC", "DIGIT", 
			"LOWER", "UPPER", "INTEGERS", "LETTERS", "STRING", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyGrammer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyGrammerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ClassPContext meat;
		public Token end;
		public ClassPContext classP() {
			return getRuleContext(ClassPContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((ProgramContext)_localctx).meat = classP();
			setState(31);
			((ProgramContext)_localctx).end = match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassPContext extends ParserRuleContext {
		public TerminalNode CLASSKEY() { return getToken(MyGrammerParser.CLASSKEY, 0); }
		public List<TerminalNode> TYPE() { return getTokens(MyGrammerParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(MyGrammerParser.TYPE, i);
		}
		public TerminalNode INHERITSKEY() { return getToken(MyGrammerParser.INHERITSKEY, 0); }
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public ClassPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classP; }
	}

	public final ClassPContext classP() throws RecognitionException {
		ClassPContext _localctx = new ClassPContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classP);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(CLASSKEY);
			setState(34);
			match(TYPE);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITSKEY) {
				{
				setState(35);
				match(INHERITSKEY);
				setState(36);
				match(TYPE);
				}
			}

			setState(39);
			match(T__1);
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(40);
				feature();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public Token name;
		public TerminalNode ID() { return getToken(MyGrammerParser.ID, 0); }
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((FeatureContext)_localctx).name = match(ID);
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(49);
				method();
				}
				break;
			case T__5:
				{
				setState(50);
				attribute();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(53);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public ArgumentsContext argumentList;
		public Token returnType;
		public ExprContext mainExpr;
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode TYPE() { return getToken(MyGrammerParser.TYPE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(T__3);
			setState(56);
			((MethodContext)_localctx).argumentList = arguments();
			setState(57);
			match(T__4);
			setState(58);
			match(T__5);
			setState(59);
			((MethodContext)_localctx).returnType = match(TYPE);
			setState(60);
			match(T__1);
			setState(61);
			((MethodContext)_localctx).mainExpr = expr();
			setState(62);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<FormalContext> formal() {
			return getRuleContexts(FormalContext.class);
		}
		public FormalContext formal(int i) {
			return getRuleContext(FormalContext.class,i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(64);
				formal();
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(65);
					match(T__6);
					setState(66);
					formal();
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public Token typeName;
		public TerminalNode TYPE() { return getToken(MyGrammerParser.TYPE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__5);
			setState(75);
			((AttributeContext)_localctx).typeName = match(TYPE);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(76);
				match(T__7);
				setState(77);
				expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public Token name;
		public Token typeName;
		public TerminalNode ID() { return getToken(MyGrammerParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(MyGrammerParser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			((FormalContext)_localctx).name = match(ID);
			setState(81);
			match(T__5);
			setState(82);
			((FormalContext)_localctx).typeName = match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public OverwriteContext calls;
		public DeclarationContext newDeclaration;
		public MultipleExprContext innerExpr;
		public Expr2Context nextExpr;
		public Expr2Context expr2() {
			return getRuleContext(Expr2Context.class,0);
		}
		public TerminalNode NOTKEY() { return getToken(MyGrammerParser.NOTKEY, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode INTEGERS() { return getToken(MyGrammerParser.INTEGERS, 0); }
		public TerminalNode STRING() { return getToken(MyGrammerParser.STRING, 0); }
		public OverwriteContext overwrite() {
			return getRuleContext(OverwriteContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public MultipleExprContext multipleExpr() {
			return getRuleContext(MultipleExprContext.class,0);
		}
		public TerminalNode IFKEY() { return getToken(MyGrammerParser.IFKEY, 0); }
		public TerminalNode THENKEY() { return getToken(MyGrammerParser.THENKEY, 0); }
		public TerminalNode ELSEKEY() { return getToken(MyGrammerParser.ELSEKEY, 0); }
		public TerminalNode FIKEY() { return getToken(MyGrammerParser.FIKEY, 0); }
		public TerminalNode WHILEKEY() { return getToken(MyGrammerParser.WHILEKEY, 0); }
		public TerminalNode LOOPKEY() { return getToken(MyGrammerParser.LOOPKEY, 0); }
		public TerminalNode POOLKEY() { return getToken(MyGrammerParser.POOLKEY, 0); }
		public TerminalNode LETKEY() { return getToken(MyGrammerParser.LETKEY, 0); }
		public List<TerminalNode> ID() { return getTokens(MyGrammerParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MyGrammerParser.ID, i);
		}
		public List<TerminalNode> TYPE() { return getTokens(MyGrammerParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(MyGrammerParser.TYPE, i);
		}
		public TerminalNode INKEY() { return getToken(MyGrammerParser.INKEY, 0); }
		public TerminalNode ISVOIDKEY() { return getToken(MyGrammerParser.ISVOIDKEY, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(84);
				((ExprContext)_localctx).calls = overwrite();
				}
				break;
			case IFKEY:
				{
				{
				setState(85);
				match(IFKEY);
				setState(86);
				expr();
				setState(87);
				match(THENKEY);
				setState(88);
				expr();
				setState(89);
				match(ELSEKEY);
				setState(90);
				expr();
				setState(91);
				match(FIKEY);
				}
				}
				break;
			case WHILEKEY:
				{
				{
				setState(93);
				match(WHILEKEY);
				setState(94);
				expr();
				setState(95);
				match(LOOPKEY);
				setState(96);
				expr();
				setState(97);
				match(POOLKEY);
				}
				}
				break;
			case LETKEY:
				{
				{
				setState(99);
				match(LETKEY);
				setState(100);
				match(ID);
				setState(101);
				match(T__5);
				setState(102);
				match(TYPE);
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(103);
					match(T__7);
					setState(104);
					expr();
					}
				}

				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(107);
					match(T__6);
					setState(108);
					match(ID);
					setState(109);
					match(T__5);
					setState(110);
					match(TYPE);
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__7) {
						{
						setState(111);
						match(T__7);
						setState(112);
						expr();
						}
					}

					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(120);
				match(INKEY);
				setState(121);
				expr();
				}
				}
				break;
			case NEWKEY:
				{
				setState(122);
				((ExprContext)_localctx).newDeclaration = declaration();
				}
				break;
			case ISVOIDKEY:
				{
				{
				setState(123);
				match(ISVOIDKEY);
				setState(124);
				expr();
				}
				}
				break;
			case NOTKEY:
				{
				setState(125);
				match(NOTKEY);
				setState(126);
				expr();
				}
				break;
			case T__8:
				{
				setState(127);
				match(T__8);
				}
				break;
			case T__9:
				{
				setState(128);
				match(T__9);
				}
				break;
			case T__3:
				{
				setState(129);
				match(T__3);
				setState(130);
				expr();
				setState(131);
				match(T__4);
				}
				break;
			case INTEGERS:
				{
				setState(133);
				match(INTEGERS);
				}
				break;
			case STRING:
				{
				setState(134);
				match(STRING);
				}
				break;
			case T__1:
				{
				setState(135);
				((ExprContext)_localctx).innerExpr = multipleExpr();
				}
				break;
			case T__10:
				{
				setState(136);
				match(T__10);
				setState(137);
				expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(140);
			((ExprContext)_localctx).nextExpr = expr2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode NEWKEY() { return getToken(MyGrammerParser.NEWKEY, 0); }
		public TerminalNode TYPE() { return getToken(MyGrammerParser.TYPE, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(NEWKEY);
			setState(143);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultipleExprContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MultipleExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleExpr; }
	}

	public final MultipleExprContext multipleExpr() throws RecognitionException {
		MultipleExprContext _localctx = new MultipleExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_multipleExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__1);
			setState(149); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				expr();
				setState(147);
				match(T__0);
				}
				}
				setState(151); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << IFKEY) | (1L << WHILEKEY) | (1L << LETKEY) | (1L << NEWKEY) | (1L << ISVOIDKEY) | (1L << NOTKEY) | (1L << ID) | (1L << INTEGERS) | (1L << STRING))) != 0) );
			setState(153);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr2Context extends ParserRuleContext {
		public MethodCallContext mCall;
		public Expr2Context expr2() {
			return getRuleContext(Expr2Context.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(MyGrammerParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MyGrammerParser.MINUS, 0); }
		public TerminalNode STAR() { return getToken(MyGrammerParser.STAR, 0); }
		public TerminalNode SLASH() { return getToken(MyGrammerParser.SLASH, 0); }
		public TerminalNode LOWERTHAN() { return getToken(MyGrammerParser.LOWERTHAN, 0); }
		public TerminalNode EQUALS() { return getToken(MyGrammerParser.EQUALS, 0); }
		public TerminalNode LOWEREQUAL() { return getToken(MyGrammerParser.LOWEREQUAL, 0); }
		public MethodCallContext methodCall() {
			return getRuleContext(MethodCallContext.class,0);
		}
		public Expr2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr2; }
	}

	public final Expr2Context expr2() throws RecognitionException {
		Expr2Context _localctx = new Expr2Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr2);
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
				case MINUS:
				case STAR:
				case SLASH:
				case LOWERTHAN:
				case EQUALS:
				case LOWEREQUAL:
					{
					setState(155);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << STAR) | (1L << SLASH) | (1L << LOWERTHAN) | (1L << EQUALS) | (1L << LOWEREQUAL))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(156);
					expr();
					}
					break;
				case T__11:
				case T__12:
					{
					setState(157);
					((Expr2Context)_localctx).mCall = methodCall();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(160);
				expr2();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodCallContext extends ParserRuleContext {
		public Token methodName;
		public TerminalNode ID() { return getToken(MyGrammerParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(MyGrammerParser.TYPE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MethodCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodCall; }
	}

	public final MethodCallContext methodCall() throws RecognitionException {
		MethodCallContext _localctx = new MethodCallContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_methodCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(165);
				match(T__11);
				setState(166);
				match(TYPE);
				}
			}

			setState(169);
			match(T__12);
			setState(170);
			((MethodCallContext)_localctx).methodName = match(ID);
			setState(171);
			match(T__3);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << IFKEY) | (1L << WHILEKEY) | (1L << LETKEY) | (1L << NEWKEY) | (1L << ISVOIDKEY) | (1L << NOTKEY) | (1L << ID) | (1L << INTEGERS) | (1L << STRING))) != 0)) {
				{
				setState(172);
				expr();
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(173);
					match(T__6);
					setState(174);
					expr();
					}
					}
					setState(179);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(182);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OverwriteContext extends ParserRuleContext {
		public Token name;
		public AttrWriteContext attr;
		public FunCallContext fun;
		public TerminalNode ID() { return getToken(MyGrammerParser.ID, 0); }
		public AttrWriteContext attrWrite() {
			return getRuleContext(AttrWriteContext.class,0);
		}
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public OverwriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_overwrite; }
	}

	public final OverwriteContext overwrite() throws RecognitionException {
		OverwriteContext _localctx = new OverwriteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_overwrite);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			((OverwriteContext)_localctx).name = match(ID);
			setState(188);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(185);
				((OverwriteContext)_localctx).attr = attrWrite();
				}
				break;
			case T__3:
				{
				setState(186);
				((OverwriteContext)_localctx).fun = funCall();
				}
				break;
			case T__0:
			case T__2:
			case T__4:
			case T__6:
			case T__11:
			case T__12:
			case PLUS:
			case MINUS:
			case STAR:
			case SLASH:
			case LOWERTHAN:
			case EQUALS:
			case LOWEREQUAL:
			case LOOPKEY:
			case ELSEKEY:
			case THENKEY:
			case FIKEY:
			case INKEY:
			case POOLKEY:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrWriteContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AttrWriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrWrite; }
	}

	public final AttrWriteContext attrWrite() throws RecognitionException {
		AttrWriteContext _localctx = new AttrWriteContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_attrWrite);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(190);
			match(T__7);
			setState(191);
			expr();
			}
			}
		}
